--- a/app/src/main/res/layout/activity_get_boniatos.xml
+++ b/app/src/main/res/layout/activity_get_boniatos.xml
@@ -51,7 +51,7 @@
                     android:text="@string/currency_name_plural" />
             </LinearLayout>
 
-            <android.support.v7.widget.AppCompatButton
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_recharge"
                 style="@style/ButtonMes"
                 android:layout_marginTop="20dp"
