--- a/app/src/main/res/layout/activity_novelty_detail.xml
+++ b/app/src/main/res/layout/activity_novelty_detail.xml
@@ -55,7 +55,7 @@
                 android:layout_marginTop="10dp"
                 android:padding="5dp"/>
 
-            <android.support.v7.widget.AppCompatButton
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_more_info"
                 style="@style/ButtonMes"
                 android:layout_marginTop="10dp"
