--- a/app/src/main/res/layout/row_payment.xml
+++ b/app/src/main/res/layout/row_payment.xml
@@ -26,13 +26,13 @@
         android:gravity="center_horizontal"
         android:layout_marginTop="10dp">
 
-        <android.support.v7.widget.AppCompatButton
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_payment_cancel"
             style="@style/TextBase.White"
             app:backgroundTint="@color/bg_button_red"
             android:text="@string/reject"/>
 
-        <android.support.v7.widget.AppCompatButton
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_payment_accept"
             style="@style/TextBase.White"
             app:backgroundTint="@color/bg_button_green"
