# common - removed camera permission and scan qr icon - fixing implicit intent google play problem - fixed ActivityNotFoundException problem

--- a/app/src/main/res/menu/new_payment_scan.xml
+++ b/app/src/main/res/menu/new_payment_scan.xml
@@ -8,6 +8,7 @@
         android:title="@string/search"
         app:showAsAction="always"
         app:iconTint="@color/purple"
-        android:orderInCategory="200"/>
+        android:orderInCategory="200"
+        android:visible="false"/>
 
 </menu>
